Fix for long secondary menu links wrapping to multiple lines
close #38

--- a/sites/all/themes/cas/sass/_responsive.scss
+++ b/sites/all/themes/cas/sass/_responsive.scss
@@ -575,6 +575,8 @@ screen and (height:768px) and (width:1024px)
     #block-menu-block-2,
     #block-views-programs-and-services-menu-bl
     {
+        padding:6px 30px;
+
         & > .content ul,
         .view-content ul
         {
